# 42seoul

./: .gitignore
42_code/: test.c  test.py
42_code/BSQ/: a.out  ft_bsq.h  process_map.c  testfile
42_code/BSQ_git/: Makefile  bsq  debug.c  diff_mine  error.c  ft_bsq.h  ft_free.c  ft_info.c  get_buff_list.c  get_firstline.c  get_from_file.c  main.pl  process_map.c  solve.c  solve_func.c  test  test.py  test_python  testfile  testfile2  testj
42_code/BSQ_git_clone/: Makefile  ft_bsq.h  ft_free.c  ft_info.c  ft_utils.c  get_firstline.c  get_from_file.c  process_map.c  solve.c  solve_func.c
42_code/rush01/: main.c
42_code/rush01_local/: a.out
42_code/rush02_git/: Makefile  main.c
exam_test/: Makefile  a.out  test.cpp  test.h
exam_test/get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  main.c  test  test.c
inner_circle/fract-ol/: arrow_render_bonus.c  fractol_init_bonus.c  fractol_utils_bonus.c  input_bonus.c  mlx_hooks_bonus.c
inner_circle/fract-ol_temp/: Makefile  arrow_render2.c  fractol_utils.c  mlx_hooks2_bonus.c
inner_circle/ft_printf/: Makefile  a.out  ft_printf.c  (+3 more)
outer_circle/malloc/: CMakeLists.txt  Makefile  a.out  log
outer_circle/malloc/include/: bins.h  dlconfig.h  dldllist.h  dlmalloc.h  dlmchunk.h  globals.h  log.h  macros.h  utils.h
outer_circle/malloc/src/: bins.c  calloc.c  dldllist.c  dlfree.c  dlmalloc.c  dlmchunk.c  globals.c  log.c  main.c  realloc.c  utils.c
outer_circle/malloc/tests/: calloc_test.c  dldllist_test.c  init_test.c  malloc_free_test.c  realloc_test.c  test.h  test_main.c  utils.c
(+1371 files in other folders)
